{{$NEXT}}

0.007     2017-03-08 20:15:13-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Remove stray line that was setting STDOUT to utf8 (wtf?)

0.006     2017-01-10 21:13:35-08:00 America/Los_Angeles

    - Fix rendering issue when all lines are the same length

0.005     2016-12-27 23:04:11-08:00 America/Los_Angeles

    - Add spacer

0.004     2016-12-20 18:13:50-08:00 America/Los_Angeles

    - Add cellstack

0.003     2016-12-20 06:23:43-08:00 America/Los_Angeles

    - Fix recommended deps

0.002     2016-12-19 12:23:51-08:00 America/Los_Angeles

    - Fix a broken test.

0.001     2016-12-18 23:01:20-08:00 America/Los_Angeles

    - Initial Release (moved out of Test2-Suite)