@@ -36,7 +36,7 @@ Test2::Tools::Tiny = 1.302072
 utf8               = 0
 
 [Prereqs / RuntimeRecommends]
-Term::ReadKey      = 2.32
+Term::Size::Any    = 0.002
 Unicode::GCString  = 2013.10
 Unicode::LineBreak = 2015.06
 
