@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Prefer Term::Size::Any over Term::ReadKey
+    - Do not use either if STDOUT is not a terminal
+
 0.007     2017-03-08 20:15:13-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Remove stray line that was setting STDOUT to utf8 (wtf?)
